--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -25,7 +25,7 @@ main {
 .dib { display: inline-block; }
 .content {
   position: relative;
-  z-index: 2;
+  z-index: 3;
 }
 .content-container {
   width: 100%;
@@ -33,7 +33,7 @@ main {
   top: 400px;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 3;
+  z-index: 4;
   .content-header {
     position: relative;
     max-width: 600px;
@@ -48,7 +48,7 @@ main {
   padding: 20px 0;
   width: 100%;
   background-color: #303030;
-  z-index: 3;
+  z-index: 4;
   img {
     // padding: 15px;
     // transition: background-color 0.5s ease;
