--- a/src/assets/sass/_lightbox.scss
+++ b/src/assets/sass/_lightbox.scss
@@ -1,6 +1,7 @@
 a.lightbox img {
   // height: 150px;
   margin: 0 20px 20px 0;
+  width: 100%;
   border: 3px solid;
   border-color: $color-pf-white;
   box-shadow: 0 0 8px rgba(0, 0 ,0, .3);
