--- a/src/assets/sass/_video.scss
+++ b/src/assets/sass/_video.scss
@@ -93,7 +93,7 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    padding: 15em 0 13em;
+    padding: 10em 0 13em;
     max-width: 82.5em;
     text-align: center;
     z-index: 5;
